[metadata]
name = ps
version = 0.0.3
url = https://github.com/thorwhalen/ps
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Call any available system command from python
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ps

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

